auto-test/tests/chapter_14/invalid_types/extra_credit/bitwise_compound_assign_with_pointer.c


int main(void) {
    int *null = 0;
    int x = 100;
    x |= null;
    return 1;
}